Fixed bug with multiple nested calls. TODO: find a cleaner solution
Signed-off-by: Guian Gumpac <guian.gumpac@improving.com>